--- a/task2.html
+++ b/task2.html
@@ -200,15 +200,16 @@
     <header>
         <h1>My Portfolio</h1>
         <nav>
-            <a href="#intro">About Me</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
+            <a href="#intro">Home</a>
+            <a href="#skills">What I Do</a>
+            <a href="#contact">Get In Touch</a>
+            <a href="#projects">Projects</a>
         </nav>
     </header>
 
     <section id="intro" class="intro">
-        <img src="https://via.placeholder.com/200" alt="Profile Picture">
-        <h2>Hello, I'm [Your Name]</h2>
+        <img src="J:\Media\Browser\DSC_0016A (1).jpg" alt="Profile Picture">
+        <h2>Hello, I'm Riddhi Rahman</h2>
         <p>I am a passionate web developer with a love for creating visually stunning and functional websites. Welcome to my portfolio!</p>
         <a href="#skills">Explore My Skills</a>
     </section>
@@ -218,12 +219,12 @@
         <div class="skill-card">
             <img src="J:\Visual Studio Code\HTML\images\pngegg.png" alt="HTML Icon">
             <h3>HTML</h3>
-            <p>Expertise in creating semantic and accessible markup.</p>
+            <p>Creating semantic and accessible markup.</p>
         </div>
         <div class="skill-card">
             <img src="J:\Visual Studio Code\HTML\images\pngegg1.png" alt="CSS Icon">
             <h3>CSS</h3>
-            <p>Strong knowledge of responsive design and animations.</p>
+            <p>Knowledge of responsive design and animations.</p>
         </div>
         <div class="skill-card">
             <img src="J:\Visual Studio Code\HTML\images\pngegg2.png" alt="JavaScript Icon">
@@ -234,13 +235,13 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Email: yourname@example.com</p>
+        <p>Email: riddhirahman786@gmail.com</p>
         <p>Phone: +123-456-7890</p>
         <p>LinkedIn: <a href="#" style="color: #bb86fc; text-decoration: none;">linkedin.com/in/yourname</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 Riddhi Rahman. All rights reserved.</p>
     </footer>
 
     <script>
